fixed spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -378,7 +378,7 @@ ul.window-toolbar{
     flex-direction: column;
     align-items: center;
     gap: 4vh;
-    padding: 1rem;
+    padding: 1vh;
     top: 0;
     left: 0;
     position: absolute;
@@ -476,6 +476,7 @@ ul.window-toolbar{
     display: flex;
     padding: 0px 5px;
     flex-wrap: wrap;
+    gap:1vh;
 }
 
 .folder-sections .section-head{
